Update html and css

--- a/index.html
+++ b/index.html
@@ -1,66 +1,128 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Pretty Products</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Pretty Products</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Karma" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald" rel="stylesheet">
+</head>
+<body>
+  <main>
 
-    <img src="images/crystal.svg" alt="">
-    <h1>Crystal</h1>
-    <p>Shiny, glowy and make great sounds.</p>
-    <img src="images/cart.svg" alt="Add to Cart">
-    <img src="images/favourite.svg" alt="Favourite">
-    <img src="images/share.svg" alt="Share">
+    <article class="crystal">
+      <img class="main-image" src="images/crystal.svg" alt="">
+      <h2>Crystal</h2>
+      <p>Shiny, glowy and make great sounds.</p>
+      <ul>
+        <li class="button-text">
+          <img class="cart-image" src="images/cart.svg" alt="Add to Cart">
+          <p>Add to cart</p>
+        </li>
+        <li><img src="images/favourite.svg" alt="Favourite"></li>
+        <li><img src="images/share.svg" alt="Share"></li>
+      </ul>
+    </article>
 
-    <img src="images/diamond.svg" alt="">
-    <h1>Diamond</h1>
-    <p>Diamonds sparkle in all shapes, sizes & clarities.</p>
-    <img src="images/cart.svg" alt="Add to Cart">
-    <img src="images/favourite.svg" alt="Favourite">
-    <img src="images/share.svg" alt="Share">
+    <article class="diamond">
+      <img class="main-image" src="images/diamond.svg" alt="">
+      <h2>Diamond</h2>
+      <p>Diamonds sparkle in all shapes, sizes & clarities.</p>
+      <ul>
+        <li class="button-text">
+          <img class="cart-image" src="images/cart.svg" alt="Add to Cart">
+          <p>Add to cart</p>
+        </li>
+        <li><img src="images/favourite.svg" alt="Favourite"></li>
+        <li><img src="images/share.svg" alt="Share"></li>
+      </ul>
+    </article>
 
-    <img src="images/gem.svg" alt="">
-    <h1>Gem</h1>
-    <p>Lots of bright, wonderful colours—and shapes.</p>
-    <img src="images/cart.svg" alt="Add to Cart">
-    <img src="images/favourite.svg" alt="Favourite">
-    <img src="images/share.svg" alt="Share">
+    <article class="gem">
+      <img class="main-image" src="images/gem.svg" alt="">
+      <h2>Gem</h2>
+      <p>Lots of bright, wonderful colours—and shapes.</p>
+      <ul>
+        <li class="button-text">
+          <img class="cart-image" src="images/cart.svg" alt="Add to Cart">
+          <p>Add to cart</p>
+        </li>
+        <li><img src="images/favourite.svg" alt="Favourite"></li>
+        <li><img src="images/share.svg" alt="Share"></li>
+      </ul>
+    </article>
 
-    <img src="images/jewel.svg" alt="">
-    <h1>Jewel</h1>
-    <p>The root word of jewellery, so ya know it’s gorg’</p>
-    <img src="images/cart.svg" alt="Add to Cart">
-    <img src="images/favourite.svg" alt="Favourite">
-    <img src="images/share.svg" alt="Share">
+    <article class="jewel">
+      <img class="main-image" src="images/jewel.svg" alt="">
+      <h2>Jewel</h2>
+      <p>The root word of jewellery, so ya know it’s gorg’</p>
+      <ul>
+        <li class="button-text">
+          <img class="cart-image" src="images/cart.svg" alt="Add to Cart">
+          <p>Add to cart</p>
+        </li>
+        <li><img src="images/favourite.svg" alt="Favourite"></li>
+        <li><img src="images/share.svg" alt="Share"></li>
+      </ul>
+    </article>
 
-    <img src="images/pearl.svg" alt="">
-    <h1>Pearl</h1>
-    <p>Beautifly pearlescent circles created inside living creatures.</p>
-    <img src="images/cart.svg" alt="Add to Cart">
-    <img src="images/favourite.svg" alt="Favourite">
-    <img src="images/share.svg" alt="Share">
+    <article class="pearl">
+      <img class="main-image" src="images/pearl.svg" alt="">
+      <h2>Pearl</h2>
+      <p>Beautifly pearlescent circles created inside living creatures.</p>
+      <ul>
+        <li class="button-text">
+          <img class="cart-image" src="images/cart.svg" alt="Add to Cart">
+          <p>Add to cart</p>
+        </li>
+        <li><img src="images/favourite.svg" alt="Favourite"></li>
+        <li><img src="images/share.svg" alt="Share"></li>
+      </ul>
+    </article>
 
-    <img src="images/rock.svg" alt="">
-    <h1>Rock</h1>
-    <p>Who doesn’t love a good, plain, ol’ rock now & then.</p>
-    <img src="images/cart.svg" alt="Add to Cart">
-    <img src="images/favourite.svg" alt="Favourite">
-    <img src="images/share.svg" alt="Share">
+    <article class="rock">
+      <img class="main-image" src="images/rock.svg" alt="">
+      <h2>Rock</h2>
+      <p>Who doesn’t love a good, plain, ol’ rock now & then.</p>
+      <ul>
+        <li class="button-text">
+          <img class="cart-image" src="images/cart.svg" alt="Add to Cart">
+          <p>Add to cart</p>
+        </li>
+        <li><img src="images/favourite.svg" alt="Favourite"></li>
+        <li><img src="images/share.svg" alt="Share"></li>
+      </ul>
+    </article>
 
-    <img src="images/ruby.svg" alt="">
-    <h1>Ruby</h1>
-    <p>If you love dazzling red—this is the one!</p>
-    <img src="images/cart.svg" alt="Add to Cart">
-    <img src="images/favourite.svg" alt="Favourite">
-    <img src="images/share.svg" alt="Share">
+    <article class="ruby">
+      <img class="main-image" src="images/ruby.svg" alt="">
+      <h2>Ruby</h2>
+      <p>If you love dazzling red—this is the one!</p>
+      <ul>
+        <li class="button-text">
+          <img class="cart-image" src="images/cart.svg" alt="Add to Cart">
+          <p>Add to cart</p>
+        </li>
+        <li><img src="images/favourite.svg" alt="Favourite"></li>
+        <li><img src="images/share.svg" alt="Share"></li>
+      </ul>
+    </article>
 
-    <img src="images/sapphire.svg" alt="">
-    <h1>Sapphire</h1>
-    <p>Blue for you. Blue is blue. Yay, blue.</p>
-    <img src="images/cart.svg" alt="Add to Cart">
-    <img src="images/favourite.svg" alt="Favourite">
-    <img src="images/share.svg" alt="Share">
+    <article class="sapphire">
+      <img class="main-image" src="images/sapphire.svg" alt="">
+      <h2>Sapphire</h2>
+      <p>Blue for you. Blue is blue. Yay, blue.</p>
+      <ul>
+        <li class="button-text">
+          <img class="cart-image" src="images/cart.svg" alt="Add to Cart">
+          <p>Add to cart</p>
+        </li>
+        <li><img src="images/favourite.svg" alt="Favourite"></li>
+        <li><img src="images/share.svg" alt="Share"></li>
+      </ul>
+    </article>
 
-  </body>
+  </main>
+</body>
 </html>
